refactor(theme): replace ThemeUtil stack with repository-backed controller

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="image_load_tag" type="id" />
     <item name="no_data" type="id" />
     <item name="portrait" type="id" />
+    <item name="tag_translucent_background_path" type="id" />
 </resources>
