--- a/app/src/main/res/layout/activity_app_font_size.xml
+++ b/app/src/main/res/layout/activity_app_font_size.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.huanchengfly.tieba.post.ui.widgets.theme.TintRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.huanchengfly.tieba.core.ui.widgets.theme.TintRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/background"
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.huanchengfly.tieba.post.ui.widgets.theme.TintLinearLayout
+        <com.huanchengfly.tieba.core.ui.widgets.theme.TintLinearLayout
             android:id="@+id/app_font_size_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <com.huanchengfly.tieba.post.ui.widgets.theme.TintTextView
+            <com.huanchengfly.tieba.core.ui.widgets.theme.TintTextView
                 android:id="@+id/app_font_size_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
                 app:rulerOnEdge="true"
                 app:rulerSize="12dp" />
 
-        </com.huanchengfly.tieba.post.ui.widgets.theme.TintLinearLayout>
+        </com.huanchengfly.tieba.core.ui.widgets.theme.TintLinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.huanchengfly.tieba.post.ui.widgets.theme.TintRelativeLayout>
+</com.huanchengfly.tieba.core.ui.widgets.theme.TintRelativeLayout>
